--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
--i https://pypi.org/simple
-cachetools==4.1.1
-tornado==6.0.4
+-i https://pypi.org/simple
+cachetools==4.1.1
+certifi==2020.6.20
+chardet==3.0.4
+idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+packaging==20.4
+pyparsing==2.4.7; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+requests==2.24.0
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tornado==6.0.4
+urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
