Fixed LatestVersion showing as 0.0

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ cachetools = "*"
 requests = "*"
 packaging = "*"
 arrow = "*"
+nuitka = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
